hid the scrollbar and changed responsiveness on the campaign page to make it more appealing on smaller screens. Also removed the bug which caused list to break into six components .

--- a/Campaign_page/style.css
+++ b/Campaign_page/style.css
@@ -8,3 +8,6 @@
     border-radius: 14%;
     width: 80px
 }
+body::-webkit-scrollbar {
+    display: none;
+  }
